<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/naman"
            android:fontFamily="@font/clb"
            android:textSize="12sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nama"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_editext"
            android:padding="4dp"
            android:textSize="12sp"
            android:inputType="text"
            android:hint="Masukan Nama Lengkap"
            android:fontFamily="@font/clb"
            android:layout_width="300dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/alamatn"
            android:fontFamily="@font/clb"
            android:textSize="12sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/alamat"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_editext"
            android:padding="4dp"
            android:textSize="12sp"
            android:inputType="text"
            android:hint="Alamat Lengkap"
            android:fontFamily="@font/clb"
            android:layout_width="300dp"
            android:layout_height="70dp" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/kotan"
            android:fontFamily="@font/clb"
            android:textSize="12sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/kota"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_editext"
            android:padding="4dp"
            android:textSize="12sp"
            android:inputType="text"
            android:hint="Masukan Kota/Kabupaten"
            android:fontFamily="@font/clb"
            android:layout_width="300dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/posn"
            android:fontFamily="@font/clb"
            android:textSize="12sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pos"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_editext"
            android:padding="4dp"
            android:textSize="12sp"
            android:inputType="number"
            android:hint="Masukan Kode Pos"
            android:fontFamily="@font/clb"
            android:layout_width="300dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/provn"
            android:fontFamily="@font/clb"
            android:textSize="12sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/provinsi"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_editext"
            android:padding="4dp"
            android:textSize="12sp"
            android:inputType="text"
            android:hint="Masukan Provinsi"
            android:fontFamily="@font/clb"
            android:layout_width="300dp"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_simpan"
                android:text="Simpan"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:layout_width="150dp"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/btn_kembali"
                android:text="Kembali"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button_default"
                android:layout_width="150dp"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</RelativeLayout>