<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/abu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Profile">
    <LinearLayout
        android:id="@+id/yes_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <ImageView
                android:background="@color/putih"
                android:layout_width="match_parent"
                android:layout_height="70dp" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:id="@+id/image"
                android:src="@drawable/ic_account_circle"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:layout_width="80dp"
                android:layout_height="80dp" />
        </RelativeLayout>
        <TextView
            android:layout_margin="10dp"
            android:fontFamily="@font/clb"
            android:textSize="15sp"
            android:text="Info Lain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:background="@color/putih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/ubahprofile"
                    android:text="@string/akun"
                    android:textSize="17sp"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:background="@color/abu"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>
                <TextView
                    android:id="@+id/ubahpass"
                    android:text="@string/ubahpass"
                    android:textSize="17sp"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:background="@color/abu"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>
                <TextView
                    android:id="@+id/bantuan"
                    android:text="@string/info"
                    android:textSize="17sp"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>

            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/logout"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:text="Keluar"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:gravity="center"
            android:fontFamily="@font/clb"
            android:layout_width="180dp"
            android:layout_height="40dp" />
    </LinearLayout>
<LinearLayout
    android:id="@+id/not_login"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="Anda Belum Login Atau Belum Terdaftar"
        android:layout_weight="1"
        android:layout_width="300dp"
        android:textSize="20sp"
        android:fontFamily="@font/noahnicole"
        android:textAlignment="center"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/abu"
        android:layout_margin="3dp"
        android:layout_width="300dp"
        android:layout_height="2dp"/>
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/login"
        android:text="@string/login_title"
        android:textSize="12sp"
        android:layout_margin="5dp"
        android:textColor="@color/putih"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />
    <Button
        android:id="@+id/daftar"
        android:background="@drawable/rounded_button_default"
        android:text="Daftar Member"
        android:layout_margin="5dp"
        android:textSize="12sp"
        android:padding="5dp"
        android:textAllCaps="false"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>