<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Register">
    <LinearLayout
        android:id="@+id/head"
        android:background="@color/bir"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/daftar"
            android:text="Sudah Jadi Member?"
            android:textSize="15sp"
            android:gravity="center"
            android:fontFamily="@font/asap"
            android:textColor="@color/putih"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="3dp"
            android:id="@+id/login"
            android:text="Login Disini!"
            android:textSize="15sp"
            android:textColor="@color/putih"
            android:layout_gravity="start"
            android:clickable="true"
            android:fontFamily="@font/asap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
<android.support.v4.widget.NestedScrollView
    android:layout_below="@+id/head"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/reg"
            android:textAlignment="center"
            android:fontFamily="@font/asap"
            android:textSize="25sp"
            android:textColor="@color/hitam"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/abu"
            android:layout_margin="3dp"
            android:layout_width="300dp"
            android:layout_height="2dp"/>
        <TextView
            android:text="Username"
            android:fontFamily="@font/asap"
            android:textColor="@color/hitam"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/username"
            android:background="@drawable/rounded_editext"
            android:layout_width="300dp"
            android:textSize="14sp"
            android:inputType="text"
            android:padding="4dp"
            android:hint="Buat Username"
            android:drawableRight="@drawable/ic_account_circle"
            android:layout_height="40dp" />
        <TextView
            android:text="No. Telepon"
            android:fontFamily="@font/asap"
            android:textColor="@color/hitam"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/phone"
            android:background="@drawable/rounded_editext"
            android:layout_width="300dp"
            android:textSize="14sp"
            android:padding="4dp"
            android:inputType="number"
            android:hint="Nomor Telepon"
            android:drawableRight="@drawable/ic_phone_android"
            android:layout_height="40dp" />
        <TextView
            android:text="Email"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/asap"
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:background="@drawable/rounded_editext"
            android:layout_width="300dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:hint="Alamat Email"
            android:inputType="textEmailAddress"
            android:drawableRight="@drawable/ic_mail_outline"
            android:layout_height="40dp" />
        <TextView
            android:text="Buat Kata Sandi"
            android:fontFamily="@font/asap"
            android:textColor="@color/hitam"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pass"
            android:background="@drawable/rounded_editext"
            android:layout_width="300dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:hint="Password"
            android:inputType="text"
            android:drawableRight="@drawable/ic_lock"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/reg"
            android:text="Daftar Sekarang"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:layout_width="300dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/daftar_g"
            android:textAlignment="center"
            android:textColor="@color/bir" />
        <com.google.android.gms.common.SignInButton
            android:layout_marginTop="5dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/lengkap"
            android:padding="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/mandali"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_width="300dp"
            android:textColor="@color/hitam"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/back"
            android:textColor="@color/bir"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="Kembali Ke Login"
            android:textAlignment="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</RelativeLayout>